--- a/task-manager/deployment.yaml
+++ b/task-manager/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: task-manager
-          image: ghcr.io/aswinsunil/task-manager:${{ github.sha }}
+          image: ghcr.io/aswinsunil/task-manager:latest
           ports:
             - containerPort: 3000
           env:
